--- a/test/textblob_test1.ipynb
+++ b/test/textblob_test1.ipynb
@@ -1,22 +1,28 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "TextBlobでの感情分析に関するテストコード  \n",
+    "Driverless AI Recipe（[sentiment_score.py](https://github.com/h2oai/driverlessai-recipes/blob/dai-1.9/data/nlp/sentiment_score.py)）カスタマイズの参考"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "TextBlob Document:  \n",
+    "[Official](https://textblob.readthedocs.io/en/dev/#)  \n",
+    "[Official - API](https://textblob.readthedocs.io/en/dev/api_reference.html)  \n",
+    "  \n",
+    "Blog  \n",
     "[【python】テキスト処理に使えるTextBlobを使う](https://qiita.com/yasutaka_ono/items/6a565c333995d43918ff)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -35,19 +41,19 @@
        "(30, 5)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"T15-2020-1-7-SAMPLE.csv\")\n",
+    "df = pd.read_csv(\"test_data/T15-2020-1-7-SAMPLE.csv\")\n",
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +145,7 @@
        "4            please bear this fact in mind .         0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +165,7 @@
        "'誰が一番に着くか私には分かりません。'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +186,7 @@
        "\"i can 't tell who will arrive first .\""
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +207,7 @@
        "TextBlob(\"I don't know who will arrive first.\")"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +228,7 @@
        "TextBlob(\"誰が最初に到着するのかわかりません。\")"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +249,7 @@
        "'en'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +269,7 @@
        "'ja'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +289,7 @@
        "'ja'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +309,7 @@
        "TextBlob(\"He loves Friend. But not in the past.\")"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +329,7 @@
        "'ja'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +349,7 @@
        "TextBlob(\"Not in the past. But, he loves Friend.\")"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -365,7 +371,7 @@
        "WordList(['i', 'can', \"'t\", 'tell', 'who', 'will', 'arrive', 'first'])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +392,7 @@
        "WordList(['誰が一番に着くか私には分かりません。'])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +413,7 @@
        "Sentiment(polarity=0.25, subjectivity=0.3333333333333333)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +434,7 @@
        "0.25"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +454,7 @@
        "Sentiment(polarity=0.0, subjectivity=0.0)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +475,7 @@
        "Sentiment(polarity=0.25, subjectivity=0.3333333333333333)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,6 +483,199 @@
    "source": [
     "# sentiment analysis -> 日本語は翻訳してから実施\n",
     "TextBlob(sample_jp).translate(to='en').sentiment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### en, ja両方に対応できる関数の定義"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sentiment_score(x):\n",
+    "            \"\"\"\n",
+    "            x: text(str type) line\n",
+    "            return: polarity\n",
+    "            \"\"\"\n",
+    "            if TextBlob(x).detect_language()==\"en\":\n",
+    "                return TextBlob(x).sentiment[0]\n",
+    "            elif TextBlob(x).detect_language()==\"ja\":\n",
+    "                return TextBlob(x).translate(to='en').sentiment[0]\n",
+    "            else:\n",
+    "                return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "誰が一番に着くか私には分かりません。\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.25"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(sample_jp)\n",
+    "sentiment_score(sample_jp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i can 't tell who will arrive first .\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.25"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(sample_en)\n",
+    "sentiment_score(sample_en)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 列への適用"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     0.25\n",
+       "1     0.50\n",
+       "2     0.00\n",
+       "3     0.80\n",
+       "4     0.00\n",
+       "5     0.00\n",
+       "6     0.00\n",
+       "7     0.00\n",
+       "8     0.00\n",
+       "9    -0.15\n",
+       "10    0.00\n",
+       "11    0.00\n",
+       "12    0.00\n",
+       "13    0.00\n",
+       "14    0.00\n",
+       "15    0.00\n",
+       "16    0.00\n",
+       "17    0.00\n",
+       "18    0.00\n",
+       "19    0.35\n",
+       "20    0.00\n",
+       "21    0.55\n",
+       "22    0.00\n",
+       "23    0.00\n",
+       "24    0.00\n",
+       "25    0.00\n",
+       "26    0.00\n",
+       "27   -0.05\n",
+       "28    0.00\n",
+       "29    0.00\n",
+       "Name: JP_Original, dtype: float64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"JP_Original\"].astype(str).fillna(\"NA\").apply(sentiment_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     0.250000\n",
+       "1     0.500000\n",
+       "2     0.000000\n",
+       "3     0.000000\n",
+       "4     0.000000\n",
+       "5     0.000000\n",
+       "6     0.000000\n",
+       "7     0.000000\n",
+       "8     0.000000\n",
+       "9     0.136364\n",
+       "10    0.000000\n",
+       "11    0.000000\n",
+       "12    0.000000\n",
+       "13    0.000000\n",
+       "14    0.000000\n",
+       "15    0.000000\n",
+       "16    0.000000\n",
+       "17    0.000000\n",
+       "18    0.000000\n",
+       "19    0.350000\n",
+       "20   -0.166667\n",
+       "21    0.550000\n",
+       "22   -0.200000\n",
+       "23   -0.050000\n",
+       "24    0.000000\n",
+       "25    0.000000\n",
+       "26    0.000000\n",
+       "27   -0.050000\n",
+       "28    0.000000\n",
+       "29    0.000000\n",
+       "Name: EN_Original, dtype: float64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"EN_Original\"].astype(str).fillna(\"NA\").apply(sentiment_score)"
    ]
   },
   {
