--- a/test/janome_test.ipynb
+++ b/test/janome_test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "(30, 5)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "4            please bear this fact in mind .         0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,16 +144,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "janome.tokenizer.Tokenizer"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "t = Tokenizer(wakati=True)"
+    "t = Tokenizer(wakati=True)\n",
+    "type(t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +181,7 @@
        "generator"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +203,7 @@
        "['誰', 'が', '一番', 'に', '着く', 'か', '私', 'に', 'は', '分かり', 'ませ', 'ん', '。']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +223,7 @@
        "'誰 が 一番 に 着く か 私 に は 分かり ませ ん 。'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -629,7 +641,7 @@
        "29            申告 する 物 は 何 も あり ませ ん 。  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,6 +801,234 @@
    ],
    "source": [
     "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 辞書の利用"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "美\t名詞,一般,*,*,*,*,美,ビ,ビ\n",
+      "ら\t名詞,接尾,一般,*,*,*,ら,ラ,ラ\n",
+      "海図\t名詞,一般,*,*,*,*,海図,カイズ,カイズ\n",
+      "画\t名詞,接尾,一般,*,*,*,画,ガ,ガ\n",
+      "コンクール\t名詞,一般,*,*,*,*,コンクール,コンクール,コンクール\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = Tokenizer()\n",
+    "for token in t.tokenize('美ら海図画コンクール'):\n",
+    "    print(token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "美\n",
+      "ら\n",
+      "海図\n",
+      "画\n",
+      "コンクール\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = Tokenizer(wakati=True)\n",
+    "for token in t.tokenize('美ら海図画コンクール'):\n",
+    "    print(token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['美', 'ら', '海図', '画', 'コンクール']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[tkn for tkn in t.tokenize('美ら海図画コンクール')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['東京',\n",
+       " 'スカイ',\n",
+       " 'ツリー',\n",
+       " 'へ',\n",
+       " 'の',\n",
+       " 'お越し',\n",
+       " 'は',\n",
+       " '、',\n",
+       " '東武',\n",
+       " 'スカイツリーライン',\n",
+       " '「',\n",
+       " 'とう',\n",
+       " 'きょう',\n",
+       " 'スカイ',\n",
+       " 'ツリー',\n",
+       " '駅',\n",
+       " '」',\n",
+       " 'が',\n",
+       " '便',\n",
+       " ' ',\n",
+       " '利',\n",
+       " 'です',\n",
+       " '。']"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[tkn for tkn in t.tokenize('東京スカイツリーへのお越しは、東武スカイツリーライン「とうきょうスカイツリー駅」が便 利です。')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "東京スカイツリー,カスタム名詞,トウキョウスカイツリー\r\n",
+      "東武スカイツリーライン,カスタム名詞,トウブスカイツリーライン\r\n",
+      "とうきょうスカイツリー駅,カスタム名詞,トウキョウスカイツリーエキ\r\n",
+      "美ら海,カスタム名詞,ちゅらうみ\r\n",
+      "H2O,カスタム名詞,えいちつーおー\r\n",
+      "機械学習,カスタム名詞,機械学習"
+     ]
+    }
+   ],
+   "source": [
+    "!cat tokenize_dict/dict_test.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = Tokenizer(\"tokenize_dict/dict_test.csv\", udic_type=\"simpledic\", udic_enc=\"utf8\", wakati=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['美ら海', '図画', 'コンクール']"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[tkn for tkn in t.tokenize('美ら海図画コンクール')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['東京スカイツリー',\n",
+       " 'へ',\n",
+       " 'の',\n",
+       " 'お越し',\n",
+       " 'は',\n",
+       " '、',\n",
+       " '東武スカイツリーライン',\n",
+       " '「',\n",
+       " 'とうきょうスカイツリー駅',\n",
+       " '」',\n",
+       " 'が',\n",
+       " '便',\n",
+       " ' ',\n",
+       " '利',\n",
+       " 'です',\n",
+       " '。']"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[tkn for tkn in t.tokenize('東京スカイツリーへのお越しは、東武スカイツリーライン「とうきょうスカイツリー駅」が便 利です。')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['H2O', 'による', '機械学習']"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[tkn for tkn in t.tokenize('H2Oによる機械学習')]"
    ]
   },
   {
